CORE-15919: Deduce Corda API bundles instead of using hard-coded lists.